--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -9,33 +9,30 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@color/teal_700"
+        android:background="@color/white"
         android:padding="16dp"
         android:layout_margin="8dp"
         android:layout_height="wrap_content">
 
 
         <ImageView
-            android:id="@+id/image_contact"
+            android:id="@+id/contact_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_call" />
+            android:layout_margin="8dp"
+            android:padding="3dp"
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
-            android:id="@+id/text_contact"
-            android:layout_width="wrap_content"
+            android:id="@+id/contact_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/image_contact"
-            android:layout_alignTop="@+id/image_contact"
-            android:layout_alignBottom="@+id/image_contact"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            style="@style/TextAppearance.AppCompat.Medium"
-            tools:text="Name" />
+            android:layout_centerVertical="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toRightOf="@id/contact_image"
+            android:text="Contact Name"
+            android:textColor="@color/black" />
     </RelativeLayout>
 </layout>
