--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="contactViewModel"
+            type="org.test.myapplication.viewmodel.ContactViewModel" />
 
+        <variable
+            name="number"
+            type="String" />
     </data>
 
     <RelativeLayout
@@ -54,10 +60,14 @@
                     android:id="@+id/idIVCall"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_margin="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:padding="4dp"
-                    android:src="@drawable/ic_sms"
-                    app:tint="@color/purple_700" />
+                    android:src="@drawable/ic_call"
+                    app:tint="@color/purple_700"
+                    android:onClick="@{() -> contactViewModel.makeCall(number)}"/>
 
                 <!--text view for displaying user contact-->
                 <TextView
@@ -78,9 +88,13 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_margin="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:onClick="@{() -> contactViewModel.sendMessage(number)}"
                     android:padding="4dp"
-                    android:src="@drawable/ic_call"
+                    android:src="@drawable/ic_sms"
                     app:tint="@color/purple_700" />
 
             </RelativeLayout>
