--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -18,6 +18,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:id="@+id/item_recycler"
         android:background="@color/white"
         android:padding="16dp"
         android:layout_margin="8dp"
@@ -45,4 +46,5 @@
             android:text="Contact Name"
             android:textColor="@color/black" />
     </RelativeLayout>
+
 </layout>
