--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,6 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="contactViewModel"
+            type="org.test.myapplication.viewmodel.ContactViewModel" />
 
     </data>
 
@@ -13,20 +16,27 @@
         tools:context=".view.fragment.MainFragment">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_main_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:id="@+id/recycler_main_fragment" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/idFABadd"
+            android:id="@+id/FAB_addContact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:src="@drawable/ic_person_add"
             app:fabCustomSize="60dp"
+            android:onClick="@{() -> contactViewModel.onClickCreateNewContact()}"
             app:tint="@color/white" />
 
     </RelativeLayout>
