--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="contact"
-            type="String" />
+            type="org.test.myapplication.model.ContactModel" />
 
 
     </data>
