--- a/app/src/main/res/layout/fragment_create_new_contact.xml
+++ b/app/src/main/res/layout/fragment_create_new_contact.xml
@@ -1,21 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.fragment.CreateNewContactFragment">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:id="@+id/gl_horizontal_bottom"
+            app:layout_constraintGuide_percent="0.75"/>
 
-    </FrameLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:id="@+id/gl_horizontal_middle"
+            app:layout_constraintGuide_percent="0.5"/>
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:id="@+id/gl_horizontal_top"
+            app:layout_constraintGuide_percent="0.1"/>
+
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_cancel"
+            app:layout_constraintTop_toBottomOf="@id/gl_horizontal_bottom"
+            android:text="@string/save" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_save"
+            app:layout_constraintTop_toBottomOf="@id/gl_horizontal_bottom"
+            android:text="@string/cancel" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            app:layout_constraintTop_toTopOf="@id/gl_horizontal_top"
+            app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_middle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:cardBackgroundColor="@color/white"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            app:cardMaxElevation="10dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/cardView">
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:orientation="vertical"
+                    android:id="@+id/gl_left_vertical"
+                    app:layout_constraintGuide_percent="0.04"/>
+
+
+                <ImageView
+                    android:id="@+id/image_view_person"
+                    android:layout_width="0dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="16dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_person"
+                    app:layout_constraintBottom_toBottomOf="@id/contact_name"
+                    app:layout_constraintDimensionRatio="W,25:34"
+                    app:layout_constraintStart_toStartOf="@id/gl_left_vertical"
+                    app:layout_constraintTop_toTopOf="@id/contact_name"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <EditText
+                    android:id="@+id/contact_name"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:text="@string/name"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintStart_toEndOf="@+id/image_view_person"
+                    tools:layout_editor_absoluteY="50dp"
+                    tools:ignore="MissingConstraints" />
+
+                <ImageView
+                    android:id="@+id/image_view_call"
+                    android:layout_width="0dp"
+                    android:layout_height="25dp"
+                    app:layout_constraintDimensionRatio="W,25:34"
+                    android:layout_marginStart="16dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_call"
+                    android:layout_marginTop="30dp"
+                    app:layout_constraintStart_toStartOf="@id/gl_left_vertical"
+                    app:layout_constraintTop_toBottomOf="@id/image_view_person"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <EditText
+                    android:id="@+id/contact_number"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:text="@string/phone_number"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintStart_toEndOf="@+id/image_view_call"
+                    app:layout_constraintTop_toTopOf="@id/image_view_call"
+                    app:layout_constraintBottom_toBottomOf="@+id/image_view_call"
+                    tools:ignore="MissingConstraints" />
+
+                <ImageView
+                    android:id="@+id/image_view_email"
+                    android:layout_width="0dp"
+                    android:layout_height="25dp"
+                    app:layout_constraintDimensionRatio="W,25:34"
+                    android:layout_marginStart="16dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_email"
+                    android:layout_marginTop="30dp"
+                    app:layout_constraintStart_toStartOf="@id/gl_left_vertical"
+                    app:layout_constraintTop_toBottomOf="@id/image_view_call"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <EditText
+                    android:id="@+id/contact_email"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:text="@string/email_address"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    app:layout_constraintBottom_toBottomOf="@+id/image_view_email"
+                    app:layout_constraintStart_toEndOf="@+id/image_view_email"
+                    app:layout_constraintTop_toTopOf="@id/image_view_email"
+                    tools:ignore="MissingConstraints" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
