--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -19,7 +19,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/item_recycler"
-        android:background="@color/white"
         android:padding="16dp"
         android:layout_height="wrap_content"
         android:onClick="@{() -> contactViewModel.onClickContactListItems(contact)}">
@@ -41,9 +40,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
-            android:layout_toRightOf="@id/contact_image"
-            android:text="Contact Name"
-            android:textColor="@color/black" />
+            android:layout_toEndOf="@id/contact_image"
+            android:text="@string/name"/>
     </RelativeLayout>
 
 </layout>
