--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="light_pink">#ffb6b9</color>
+    <color name="pink1">#ff585d</color>
+    <color name="pink2">#e94c6f</color>
+    <color name="dark_pink">#bd1550</color>
+    <color name="yellow">#ffb549</color>
+    <color name="blue1">#41b6e6</color>
+    <color name="blue2">#005995</color>
+    <color name="dark_blue">#3A4457</color>
+    <color name="orange">#ff502f</color>
+    <color name="red">#F71E35</color>
+    <color name="crimson">#542733</color>
+    <color name="eggplant">#490a3d</color>
+    <color name="green">#5a6a62</color>
+    <color name="light_green">#15b76c</color>
+    <color name="dark_green">#003333</color>
+    <color name="dark_teal">#103641</color>
+    <color name="brown">#866667</color>
+    <color name="milky">#fad6a6</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00E6E2E2</color>
