revisit code. also add back arrow in DetailFragment. in additional, save last search query with QueryPreferences.java class.

--- a/app/src/main/res/layout/bottom_sheet_share.xml
+++ b/app/src/main/res/layout/bottom_sheet_share.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:id="@+id/tv_file_share"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textSize="20sp"
@@ -29,7 +29,7 @@
 
         <TextView
             android:id="@+id/tv_text_share"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textSize="20sp"
