--- a/app/src/main/res/layout-land/fragment_new_contact.xml
+++ b/app/src/main/res/layout-land/fragment_new_contact.xml
@@ -24,21 +24,33 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.94" />
 
-
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_left_vertical_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.04" />
+            app:layout_constraintGuide_percent="0.02" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_left_vertical_text"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.12" />
+            app:layout_constraintGuide_percent="0.08" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_left_vertical_image_center"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.42" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gl_left_vertical_text_center"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.48" />
 
 
         <ImageView
@@ -64,7 +76,6 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/layout_name"
             android:orientation="horizontal"
             app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
@@ -146,17 +157,17 @@
             android:layout_height="wrap_content"
             android:text="@string/phone"
             app:layout_constraintBottom_toBottomOf="@id/iv_phone"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
             app:layout_constraintTop_toTopOf="@id/iv_phone" />
 
         <ImageView
             android:id="@+id/iv_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24sp"
-            app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image"
-            app:layout_constraintTop_toBottomOf="@id/layout_name"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text_center"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image_center"
+            app:layout_constraintTop_toBottomOf="@id/gl_left_horizontal_top"
             app:srcCompat="@drawable/ic_call"
             android:contentDescription="@string/icon_for_call_number" />
 
@@ -164,8 +175,7 @@
             android:id="@+id/editTextPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
             app:layout_constraintTop_toBottomOf="@id/tv_phone"
             android:hint="@string/phone"
             android:ems="10"
@@ -177,7 +187,7 @@
             android:layout_height="wrap_content"
             android:text="@string/email"
             app:layout_constraintBottom_toBottomOf="@id/iv_email"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
             app:layout_constraintTop_toTopOf="@id/iv_email" />
 
         <ImageView
@@ -185,8 +195,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24sp"
-            app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image"
+            app:layout_constraintEnd_toStartOf="@id/gl_left_vertical_text_center"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_image_center"
             app:layout_constraintTop_toBottomOf="@id/editTextPhone"
             app:srcCompat="@drawable/ic_email"
             android:contentDescription="@string/icon_for_email" />
@@ -195,8 +205,7 @@
             android:id="@+id/editTextEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text"
+            app:layout_constraintStart_toEndOf="@id/gl_left_vertical_text_center"
             app:layout_constraintTop_toBottomOf="@id/tv_email"
             android:hint="@string/email"
             android:ems="10"
@@ -207,7 +216,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@id/gl_left_horizontal_bottom"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/gl_left_vertical_text_center"
             app:layout_constraintEnd_toStartOf="@id/btn_save"
             android:text="@string/cancel" />
 
