--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -10,4 +10,21 @@
         app:showAsAction="collapseActionView|always"
         />
 
+    <item
+        android:id="@+id/menu_delete"
+        android:title="@string/delete"
+        android:icon="@drawable/ic_delete"
+        app:showAsAction="always"
+        />
+    <item
+        android:id="@+id/menu_select_all"
+        android:title="@string/select_all"
+        android:icon="@drawable/ic_check_circle"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_unSelectAll"
+        android:icon="@drawable/ic_unchecked"
+        android:title="@string/unselect_all"
+        app:showAsAction="ifRoom|withText" />
 </menu>
